--- a/posts/preference_alignment.ipynb
+++ b/posts/preference_alignment.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "---\n",
-    "title: \"Preference Alignment using DPO\"\n",
+    "title: \"Preference Alignment using Direct Preference Optimization (DPO)\"\n",
     "description: \"A hands on guide to perform preference alignment of Large Language Models using Direct Preference Optimization (DPO) algorithm\"\n",
     "date: \"2025-01-05\"\n",
     "categories: \n",
@@ -702,7 +702,8 @@
    },
    "outputs": [],
    "source": [
-    "outputs = model.generate(**inputs, max_new_tokens=100, temperature=0.2, top_p=0.9, do_sample=True)"
+    "outputs = model.generate(**inputs, max_new_tokens=100, temperature=0.2, top_p=0.9, \n",
+    "                         do_sample=True)"
    ]
   },
   {
@@ -788,7 +789,8 @@
    },
    "outputs": [],
    "source": [
-    "def get_completion(model_, input_prompt, system_prompt, max_new_tokens=100, temperature=0.2, top_p=0.9):\n",
+    "def get_completion(model_, input_prompt, system_prompt, max_new_tokens=100, \n",
+    "                   temperature=0.2, top_p=0.9):\n",
     "    messages = [\n",
     "    {\n",
     "        \"role\": \"system\",\n",
@@ -800,8 +802,8 @@
     "    input_text=tokenizer.apply_chat_template(messages, tokenize=False)\n",
     "    inputs = tokenizer(input_text, return_tensors=\"pt\").to(device)\n",
     "    prompt_length = inputs['input_ids'].shape[1]\n",
-    "    outputs = model_.generate(**inputs, max_new_tokens=max_new_tokens, temperature=temperature,\n",
-    "                             top_p=top_p, do_sample=True)\n",
+    "    outputs = model_.generate(**inputs, max_new_tokens=max_new_tokens, \n",
+    "                              temperature=temperature, top_p=top_p, do_sample=True)\n",
     "    output_text = tokenizer.decode(outputs[0][prompt_length:], skip_special_tokens=True)\n",
     "    return output_text"
    ]
